noahs gui changes